# pelican-events-plugin

./: README.md  events.py  events_list_page.html  pyproject.toml  requirements.txt  upcoming-events.html
src/pelican/plugins/makerspace_esslingen_events/: __about__.py  events.py
template/: events_list.html  upcoming_events.html  upcoming_events_page.html
